// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ceramic API Caip10Link test Anchoring works 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 1538352000,
    "blockTimestamp": 1538352000,
    "chainId": "inmemory:12345",
    "root": Object {
      "codec": "dag-cbor",
      "hash": Object {
        "data": Array [
          18,
          32,
          162,
          24,
          79,
          59,
          0,
          32,
          241,
          225,
          222,
          103,
          232,
          76,
          96,
          132,
          94,
          65,
          71,
          113,
          183,
          168,
          210,
          167,
          93,
          80,
          51,
          68,
          85,
          94,
          81,
          116,
          15,
          246,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "txHash": Object {
      "codec": "eth-tx",
      "hash": Object {
        "data": Array [
          27,
          32,
          24,
          49,
          225,
          228,
          11,
          171,
          49,
          208,
          15,
          26,
          103,
          65,
          213,
          144,
          208,
          238,
          98,
          25,
          53,
          119,
          40,
          180,
          18,
          220,
          137,
          238,
          244,
          57,
          124,
          243,
          123,
          170,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  },
  "anchorStatus": 3,
  "content": "did:key:z6MkjKeH8SgVAYCvTBoyxx7uRJFGM2a9HUeFwfJfd6ctuA3X",
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          200,
          74,
          232,
          140,
          28,
          192,
          67,
          36,
          28,
          26,
          118,
          217,
          148,
          124,
          159,
          18,
          83,
          129,
          58,
          209,
          30,
          130,
          93,
          112,
          79,
          41,
          245,
          248,
          155,
          39,
          171,
          56,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          225,
          125,
          51,
          232,
          210,
          235,
          210,
          195,
          45,
          77,
          117,
          35,
          39,
          113,
          251,
          88,
          37,
          186,
          87,
          57,
          69,
          255,
          210,
          95,
          63,
          107,
          216,
          33,
          109,
          67,
          114,
          199,
        ],
        "version": 1,
      },
      "type": 2,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          162,
          24,
          79,
          59,
          0,
          32,
          241,
          225,
          222,
          103,
          232,
          76,
          96,
          132,
          94,
          65,
          71,
          113,
          183,
          168,
          210,
          167,
          93,
          80,
          51,
          68,
          85,
          94,
          81,
          116,
          15,
          246,
        ],
        "version": 1,
      },
      "type": 1,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          93,
          168,
          219,
          109,
          233,
          195,
          40,
          133,
          121,
          51,
          44,
          116,
          216,
          129,
          49,
          121,
          133,
          248,
          145,
          126,
          244,
          54,
          1,
          37,
          248,
          98,
          14,
          121,
          132,
          126,
          171,
          68,
        ],
        "version": 1,
      },
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb1@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create and link DID 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          44,
          116,
          97,
          144,
          16,
          63,
          140,
          178,
          166,
          226,
          32,
          193,
          116,
          120,
          127,
          90,
          193,
          130,
          239,
          77,
          173,
          56,
          189,
          43,
          21,
          114,
          142,
          92,
          147,
          213,
          152,
          228,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          217,
          29,
          214,
          17,
          205,
          144,
          164,
          199,
          82,
          186,
          91,
          4,
          49,
          16,
          8,
          212,
          139,
          33,
          248,
          0,
          180,
          215,
          31,
          108,
          133,
          18,
          105,
          9,
          211,
          63,
          198,
          224,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb7@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "next": Object {
    "content": "did:key:z6MkjKeH8SgVAYCvTBoyxx7uRJFGM2a9HUeFwfJfd6ctuA3X",
    "metadata": Object {
      "controllers": Array [
        "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb7@eip155:1",
      ],
      "family": "caip10-eip155:1",
      "lastUpdate": undefined,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from valid account id 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          223,
          158,
          246,
          166,
          139,
          226,
          237,
          237,
          53,
          255,
          89,
          35,
          47,
          58,
          120,
          151,
          39,
          238,
          180,
          208,
          143,
          61,
          173,
          12,
          30,
          198,
          46,
          42,
          188,
          115,
          116,
          6,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb8@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "next": Object {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;
